EPBR-6082: fix overflowing email address
Allow email to wrap at small widths, but prevent wrapping where it will fit on
one line

--- a/assets/components/_related-assessments.scss
+++ b/assets/components/_related-assessments.scss
@@ -1,11 +1,7 @@
 #other_certificates_and_reports {
-  // tailwind style class
-
-  .whitespace-nowrap {
-    white-space: nowrap;
-  }
-
+  .email,
   .tel {
-    white-space: nowrap;
+    display: inline-block;
+    word-break: break-word;
   }
 }
